Corrections - Overflow removed
Overflow removed and home page margins reduced in mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App{  
   font-family: "Poppins";
   color:#000;
+  overflow-x: hidden;
   
 }
 
