--- a/src/Components/navbar2/Navbar2.css
+++ b/src/Components/navbar2/Navbar2.css
@@ -47,14 +47,13 @@ nav .navbar{
     justify-content: space-between;
 }
 
-
+/* 
 .brand-logo{
     color:white;
     text-decoration: none;
-    font-size: 22px;
-    
+    font-size: 22px;  
 
-}
+} */
 
 .nav-links{
     display: flex;
@@ -257,10 +256,11 @@ a.mega-link:active{
         height: 100vh;
         width: 100%;
         max-width: 350px;
-        background-color:rgba(0, 16, 25, 0.9);
+        background-color:rgba(0, 16, 25, 0.8);
         display: block;
         top:0;
-        left:-100%;
+        /* left:-100%; */
+        right:-100%;
         overflow-y: auto;
         line-height: 50px;
         padding:50px 10px;
@@ -273,11 +273,12 @@ a.mega-link:active{
         height: 100vh;
         width: 100%;
         max-width: 350px;
-        /* background: #242526; */
-        background-color: #001c2ce6;
+        background-color:rgba(0, 16, 25, 0.8);
+        /* background-color: #001c2ce6; */
         display: block;
         top:0;
-        left:-100%;
+        /* left:-100%; */
+        right:-100%;
         overflow-y: auto;
         line-height: 50px;
         padding:50px 10px;
@@ -309,7 +310,8 @@ a.mega-link:active{
         width:100%;
         opacity:1;
         visibility: visible;
-        padding-left:20px;
+        /* padding-left:20px; */
+        padding-right:20px;
         max-height: 0px;
         overflow: hidden;
         transition: all 0.3s ease;
@@ -408,8 +410,7 @@ a.mega-link:active{
     .mega-container .mega-content .row{
         width: 100%;
         margin-bottom: 15px;
-        /* border-top: 1px solid #fafafa; */
-        
+        /* border-top: 1px solid #fafafa; */    
     }
     
     .mega-content .row .mega-links{
@@ -421,7 +422,6 @@ a.mega-link:active{
         margin:0;
         border-top: 2px solid #fafafa;
     }
-
 
      /* Hiding scrollbar for Chrome, Safari and Opera */
      .nav-links::-webkit-scrollbar {
