--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,6 @@ body{
   margin:0;
   padding:0;
   background-color: #020D1C;
+  /* box-sizing: border-box; */
+  overflow-x: hidden;
 }
